retrieveUnpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AcademicTitle__c</fullName>
        <description>AcademicTitle /</description>
        <label>Academic title</label>
        <picklist>
            <picklistValues>
                <fullName>Col. Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doc. dr.sc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dipl.-lng.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr. Rer. Medic.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr. mod. Dr. sc. tech.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DipL-Phys.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dipl.-Paed.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr. Aud.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.-lng.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr. med.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr. Ir.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dipl. sc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.D.,Ph.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof. Dr. Biomed. Ing.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof. dr. hab. med.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof. dr. hab. n.med.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PhD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof. Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof. Dr. med.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Priv.-Doz. Dr. med.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>/</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>/</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credentials__c</fullName>
        <description>/</description>
        <label>Credentials</label>
        <picklist>
            <picklistValues>
                <fullName>M.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ph.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Au.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.A.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.A.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.S.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HouseNumber__c</fullName>
        <description>/</description>
        <label>House Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>/</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LS_ObservationText__c</fullName>
        <description>ExternalProfessionalId /</description>
        <label>Observation Text LS</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LS_ProfessionalId__c</fullName>
        <description>ExternalProfessionalId / Professional Id migrated from the legacy system</description>
        <externalId>true</externalId>
        <label>Professional Id LS</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language / ISO 639 Language code</description>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LegacySystemName__c</fullName>
        <description>TBD /</description>
        <label>Legacy System Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <description>/</description>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalId__c</fullName>
        <displayFormat>X{000000000}</displayFormat>
        <externalId>true</externalId>
        <label>Professional Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>QualificationDate__c</fullName>
        <description>QualificationDate /</description>
        <label>Qualification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RecordTypeLabel__c</fullName>
        <description>/</description>
        <label>Record Type Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>/</description>
        <label>Region</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>/</description>
        <label>Street</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrainingStatus__c</fullName>
        <description>/</description>
        <label>Training Status</label>
        <picklist>
            <picklistValues>
                <fullName>certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>certification pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Audiologist</fullName>
        <active>true</active>
        <label>Audiologist</label>
    </recordTypes>
    <recordTypes>
        <fullName>PatientContact</fullName>
        <active>true</active>
        <label>Patient Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Surgeon</fullName>
        <active>true</active>
        <label>Surgeon</label>
    </recordTypes>
</CustomObject>